<resources>
    <string name="app_name">KanquiMania Park</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido</string>
    <string name="sexo">Sexo:</string>
    <string name="correo">Correo</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="id">ID: </string>
    <string name="varon">Hombre</string>
    <string name="hembra">Mujer</string>
    <string name="registrar">Registrar Cliente</string>
    <string name="fechaInvalida">Fecha no válida.</string>
    <string name="correoInvalido">Correo no valido.</string>
    <string name="clienteAgregado">Cliente Agregado</string>
    <string name="producto_agregado">Producto Agregado</string>
    <string name="sexo_invalido">Debe seleccionar un sexo</string>
    <string name="foto_invalido">La foto del cliente es necesaria.</string>
    <string name="numeroInvalido">Número Invalido</string>
    <string name="vacio">Este campo no puede estar vacio</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="aceptar">Aceptar</string>
    <string name="error">ERROR</string>
    <string name="precio">Precio (RD$):</string>
    <string name="titulo">Titulo:</string>
    <string name="set_colores">Identidficar boletas</string>
    <string name="login_title">Inicio de Sesión</string>
    <string name="login_info">Debe iniciar sesión para continuar</string>
    <string name="cancelar">Cancelar</string>
    <string name="numero">Número de teléfono</string>
    <string name="gestion_empleados">Gestionar Empleados</string>
    <string name="gestion_atracciones">Gestionar Atracciones</string>
    <string name="gestion_especiales">Gestionar Especiales</string>
    <string name="gestion_productos">Gestionar Productos</string>
    <string name="generar_reporte">Generar Reporte</string>
    <string name="crear_empleado">Crear nuevo empleado</string>
    <string name="crear_especial">Crear nuevo especial</string>
    <string name="crear_producto">Crear nuevo producto</string>
    <string name="crear_atraccion">Crear nueva atracción</string>
    <string name="username">Username:</string>
    <string name="pass">Contraseña</string>
    <string name="posicion">Posicion: </string>
    <string name="admin">Opciones  del administrador</string>
    <string name="editar_empleado">Editar</string>
    <string name="borrar_empleado">Eliminar</string>
    <string name="gestionar_empleados">Manejo de empleado</string>
    <string name="info_editar">Informaciones del empleado</string>
    <string name="info_producto">Informaciones del producto</string>
    <string name="info_atracciones">Informaciones de la atracción</string>
    <string name="info_especiales">Informaciones del especial</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="usuario_existe">Este username ya existe, elija otro.</string>
    <string name="nombre_existe">Este producto ya existe.</string>
    <string name="time">Tiempo (Minutos): </string>
    <string name="cambio_realizado">Los cambios se han realizados</string>
    <string name="espcial_porciento">Porciento a aplicar:</string>
    <string name="atracciones">Atracciones</string>
    <string name="productos">Productos</string>
    <string name="tipo_especial">Tipo: </string>
    <string name="agregar">Agregar</string>
    <string name="fecha_inicio">Fecha inicio:</string>
    <string name="fecha_fin">Fecha fin:</string>
    <string name="productos_aplicados">Productos afectados</string>
    <string name="ilimitado">Ilimitado</string>
    <string name="atencion">ATENCION!</string>
    <string name="desea_agregar_productos_especial">Esta seguro de quiere crear este especial?</string>
    <string name="atraccion_agrada">Atraccion agregada</string>
    <string name="especial_creado">Especial creado</string>
    <string name="especial_borrado">Especial borrado</string>
    <string name="setting_boletas">Delimitando colores de las boletas</string>
    <string name="identificar_boletas">Identificar colores de cintillos</string>
    <string name="porciento_invalido">El porcentaje debe de estar entre 1 y 100</string>
    <string name="choose_color">Seleccionar color</string>
    <string name="search_clients">Busqueda clientes</string>
    <string name="add_clientes">Agregar Cliente</string>
    <string name="title_activity_probando">Probando</string>
    <string name="crear_cliente">Crear Cliente</string>
    <string name="title_activity_color_setter">ColorSetter</string>
    <string name="facturacion">Facturación</string>
    <string name="productos_agregados">Productos Agregados: </string>
    <string name="boletas_agregadas">Boletas Agregadas:</string>
    <string name="seguro_borrar_item">Esta seguro de que quiere borrar este producto?</string>
    <string name="info_cliente">Información del Cliente</string>
    <string name="seleccione_tipo_ticket">Seleccione tipo de ticket:</string>
    <string name="proceder_checkout">Segura que proceder a facturar?</string>
    <string name="title_activity_check_out">CheckOutActivity</string>
    <string name="sub_total">SubTotal:</string>
    <string name="total">Total:</string>
    <string name="recibido">Recibido:</string>
    <string name="devuelta">Devuelta:</string>
    <string name="elegir_algo">Debe seleccionar al menos un elemento</string>
    <string name="dinero_no_suficiente">El monto no es suficiente</string>
    <string name="desea_realizar_pedido">Desea confirmar la compra?</string>
    <string name="especial_aplicado">Especial aplicado:</string>
    <string name="hello">Hello World, BloothPrinterActivity!</string>
    <string name="connect_bluetooth_device_btn">connect a bluetooth device</string>
    <string name="connect_to_ip_btn">connect to IP</string>
    <string name="print_content_hint_edt">please input the print content!</string>
    <string name="checkbox_beikuan">Width</string>
    <string name="checkbox_underline">Underline</string>
    <string name="checkbox_bold">Bold</string>
    <string name="checkbox_height">Height</string>
    <string name="checkbox_minifont">Minifont</string>
    <string name="checkbox_hightlight">Hightlight</string>
    <string name="print_btn">print</string>
    <string name="test_btn">test</string>
    <string name="option_btn">Print Option</string>
    <string name="bt_inquiry_btn">Inquiry Status</string>
    <string name="quit_btn">Quit</string>
    <string name="back_btn">Back</string>
    <string name="print_table_btn">Print table</string>
    <string name="print_smallticket_btn">Print Small Ticket</string>
    <string name="print_barcode_btn">Print Barcode</string>
    <string name="barcode_content_edt">Most can only enter 16 characters!</string>
    <string name="print_image_btn">Print Image</string>
    <string name="print_text_btn">Print Text</string>
    <string name="print_option">Print Option</string>
    <string name="search_bluetooth_device_btn">Search Bluetooth Device</string>
    <string name="bluetooth_listactivity_title">Please select a device to connect</string>
    <string name="bluetooth_connect_fail">Bluetooth Device Connect Failed!</string>
    <string name="bluetooth_connect_sucess">Congratulations, successfully connect to Bluetooth devices:</string>
    <string name="wifi_connect_fail">WIFI Connect Failed!</string>
    <string name="wifi_connect_sucess">Congratulations, successfully connect to WIFI</string>
    <string name="bluetooth_unconnected">Not Connected!</string>
    <string name="bluetooth_open_hint">Bluetooth not open,please open bluetooth!</string>
    <string name="bluetooth_address_invidate_hint">Bluetooth address invalidate,please check!</string>
    <string name="barcode_input_hint">please input 0~9 character!</string>
    <string name="no_bluetooth_device_hint">No bluetooth device!</string>
    <string name="no_start_bluetooth_hint">No start bluetooth!</string>
    <string name="bluetooth_address_invalid_hint">Bluetooth Address invalid!</string>
    <string name="bluetooth_address_err_hint">Bluetooth Address Err!</string>
    <string name="start_bluetooth_err_hint">Start Bluetooth Err!</string>
    <string name="is_close_local_bluetooth_hint">Is Close Local Bluetooth?</string>
    <string name="yes_hint">Yes</string>
    <string name="no_hint">No</string>
    <string name="close_bluetooth_err_hint">close bluetooth err!</string>
    <string name="bluetooth_status_matched_hint">matched</string>
    <string name="bluetooth_status_unmatched_hint">unmatched</string>
    <string name="connecting_bluetooth_device_hint">Connecting Bluetooth Device...</string>
    <string name="please_wait_hint">Please Wait...</string>
    <string name="get_bluetooth_device_err_hint">Get Bluetooth device err!</string>
    <string name="search_bluetooth_device_err_hint">Search Bluetooth device err!</string>
    <string name="bluetooth_device_handler_err_hint">Bluetooth device Handler Err!</string>
    <string name="bluetooth_status_err_hint">Bluetooth Status Err,please restart bluetooth!</string>
    <string name="bluetooth_close_sucess_hint">Local Bluetooth Close Sucess!</string>
    <string name="search_printer_hint">Local Bluetooth Open Sucess,please search printer!</string>
    <string name="search_complete_hint">Bluetooth Device Search Complete!</string>
    <string name="match_process_fail_hint">Match Process Failed!</string>
    <string name="connected_device_hint">Connected Device: </string>
    <string name="bluetooth_connected_cannot_connect">Bluetooth Connected,do not need to reconnect! </string>
    <string name="unopen_bluetooth_hint">Bluetooth is closed,will you open it or not? </string>
    <string name="open_bluetooth_err_hint">Open Bluetooth err! </string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="print_text_content">Thanks for using the RPP-02 Portable Bluetooth Printer! </string>
    <string name="print_smallticket_content1">Check-out sheet </string>
    <string name="print_smallticket_content2">Serial number: 51 </string>
    <string name="print_smallticket_content3">Order Number: P13030300056      Cashier:  </string>
    <string name="print_smallticket_content4">Time: 04-23  15:21 </string>
    <string name="print_smallticket_content5">Name       Quantity  Price  Sum </string>
    <string name="print_smallticket_content6">cheese cake  2        10     20 </string>
    <string name="print_smallticket_content7">apple juice  2        10     20 </string>
    <string name="print_smallticket_content8">Consumption: 40 </string>
    <string name="print_smallticket_content9">Receivables: 40 </string>
    <string name="print_smallticket_content10">Cash: 40 </string>
    <string name="print_smallticket_content11">Signature: </string>
    <string name="print_ticket_line1">"--------------------------------"  </string>
    <string name="print_ticket_line2">"---------------"  </string>
    <string name="print_table_content1">"┏━━━┳━━━━┳━┳━━━┓\n"  </string>
    <string name="print_table_content2">"┃From  ┃Shanghai┃To┃Xiamen┃\n"  </string>
    <string name="print_table_content3">"┣━━━╋━━┳━┻┳┻━━━┫\n"  </string>
    <string name="print_table_content4">"┃Amount┃ 1  ┃No. ┃5555555 ┃\n" </string>
    <string name="print_table_content5">"┣━━━┻━┳┻━━┻━━━━┫\n"  </string>
    <string name="print_table_content6">"┃Addressee ┃Sun Jun         ┃\n" </string>
</resources>