<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="600sp"
    android:minHeight="150dp"
    android:layout_marginStart="0sp" android:layout_marginEnd="0sp"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:text="@string/info_producto"
        android:background="@color/red"
        android:textColor="@color/white"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginTop="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/show_atr_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/titulo"
                    android:layout_marginTop="10dp"
                    android:enabled="false"
                    android:textColor="@color/black"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/show_atr_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/precio"
                    android:enabled="false"
                    android:textColor="@color/black"/>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="150sp"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/show_atr_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/time"
                android:enabled="false"
                android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <Button
            android:id="@+id/edit_atraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_empleado"
            android:layout_gravity="bottom"
            android:background="#ffff"
            android:textColor="@color/colorAccent"
            />

        <Button
            android:visibility="gone"
            android:id="@+id/aceptar_atraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:background="#ffff"
            android:textColor="@color/colorAccent"/>

        <Button
            android:id="@+id/delete_atraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrar_empleado"
            android:layout_gravity="bottom"
            android:background="#ffff"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</LinearLayout>