<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.djc.kanquimaniapark.Admin.GestionAtracciones.GestionAtracciones">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent">
        <include layout="@layout/content_atracciones"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_atraccion"
            android:textSize="30sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/nombre_atraccion"
                android:inputType="text"
                android:hint="@string/titulo"
                android:textSize="25sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/precio_atraccion"
                android:hint="@string/precio"
                android:textSize="25sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/tiempo_atraccion"
                android:hint="@string/time"
                android:textSize="25sp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:layout_gravity="center"
            android:id="@+id/crear_atraccion_button"/>
    </LinearLayout>

</LinearLayout>
